--- a/Web Dasar/index.html
+++ b/Web Dasar/index.html
@@ -10,6 +10,6 @@
     <h1><b>Yehezkiel David Setiawan</b></h1>
     <img src="image/b59f1be4-1d4d-43d1-9670-8d6dcfb884b3.jpg" height="600" width="600"  >
     <p><b><i>Asli Bandung</i></b></p>
-    <p>Kuliah di <a href="https://it.maranatha.edu">IT.Maranatha Bandung</a></p>
+    <p>Kuliah di <a href="https://it.maranatha.edu" target="_blank">IT.Maranatha Bandung</a></p>
 </body>
 </html>            
